force-app/main/default/objects/User/fields/Campana_Navidad__c.field-meta.xml
<CustomField>
    <fullName>Campana_Navidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campaña navideña, checkbox para saber si se leyó o no</description>
    <label>Campana Navidad</label>
    <type>Checkbox</type>
</CustomField>