force-app/main/default/objects/User/fields/COD_SAP_Usuario__c.field-meta.xml
<CustomField>
    <fullName>COD_SAP_Usuario__c</fullName>
    <label>COD SAP Usuario</label>
    <length>5</length>
    <type>Text</type>
</CustomField>