force-app/main/default/objects/User/fields/Correo_Referente_Cr_ditos__c.field-meta.xml
<CustomField>
    <fullName>Correo_Referente_Cr_ditos__c</fullName>
    <label>Correo Referente Créditos</label>
    <type>Email</type>
</CustomField>