force-app/main/default/objects/User/fields/Id_SAP_Ref_Cr_ditos__c.field-meta.xml
<CustomField>
    <fullName>Id_SAP_Ref_Cr_ditos__c</fullName>
    <label>Id SAP Ref Créditos</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>