force-app/main/default/objects/User/fields/Mail_del_CCC__c.field-meta.xml
<CustomField>
    <fullName>Mail_del_CCC__c</fullName>
    <label>Correo del CCC correspondiente</label>
    <type>Email</type>
</CustomField>