force-app/main/default/objects/User/fields/Referencia_Subgerente_Productos__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Subgerente_Productos__c</fullName>
    <label>Referencia Subgerente Productos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>