force-app/main/default/objects/User/fields/user_Finanzas_1__c.field-meta.xml
<CustomField>
    <fullName>user_Finanzas_1__c</fullName>
    <defaultValue>&quot;creyes@icbfs.cl&quot;</defaultValue>
    <label>user Finanzas 1</label>
    <type>Email</type>
</CustomField>