force-app/main/default/objects/User/fields/User_Finanzas_2__c.field-meta.xml
<CustomField>
    <fullName>User_Finanzas_2__c</fullName>
    <defaultValue>&quot;dreyes@icbfs.cl&quot;</defaultValue>
    <label>User Finanzas 2</label>
    <type>Email</type>
</CustomField>